<resources>
    <string name="app_name">CashBox</string>
    <string name="src_UseLicenceKey">Lizenzkey anwenden</string>
    <string name="src_Statistik">Statistik</string>
    <string name="src_ArtikelBearbeiten">Artikel bearbeiten</string>
    <string name="src_TischeBearbeiten">Tische bearbeiten</string>
    <string name="src_Einstellungen">Einstellungen</string>
    <string name="src_Information">Information</string>
    <string name="src_Hilfe">Hilfe</string>
    <string name="src_KasseLoeschen">Kasse löschen</string>
    <string name="src_Druckerverwaltung">Druckerverwaltung</string>
    <string name="src_HinzugefuegteDrucker">Hinzugefügte Drucker</string>
    <string name="src_DruckerAuswaehlen">Drucker Auswählen</string>
    <string name="src_AktuelleDruckerNetzwerk">Aktuelle Drucker im Netzwerk</string>
    <string name="src_KeineDruckerausgewaehlt">Keine(n) Drucker ausgewählt</string>
    <string name="src_KeineDruckerGefunden">Keine(n) Drucker gefunden</string>
    <string name="src_DruckerBereitsVorhanden">Drucker bereits vorhanden</string>
    <string name="src_DruckerHinzugefuegt">Drucker hinzugefügt</string>
    <string name="src_DruckerInformationen">Druckerinformationen</string>
    <string name="src_DruckerEntfernen">Drucker Entfernen</string>
    <string name="src_Testdruck">Testdruck</string>
    <string name="src_DruckerEntfernt">Drucker entfernt</string>
    <string name="src_KeineDruckerHinzugefuegt">Keine Drucker hinzugefügt</string>
    <string name="src_KeinDruckerHinzugefuegt">Kein Drucker hinzugefügt</string>
    <string name="src_KeineKategorienHinzugefuegt">Keine Kategorien hinzugefügt</string>
    <string name="src_KeineProdukteHinzugefuegt">Keine Produkte hinzugefügt</string>
    <string name="src_KeineDruckerVorhanden">Keine Drucker vorhanden</string>
    <string name="src_TestnachrichtVersendet">Testnachricht versendet</string>
    <string name="src_Hersteller">Hersteller</string>
    <string name="src_DruckerName">Druckername</string>
    <string name="src_IPAdresse">IP-Adresse</string>
    <string name="src_MACAdresse">MAC-Adresse</string>
    <string name="src_DruckerNetzwerkGesucht">Drucker im Netzwerk werden gesucht</string>
    <string name="src_DruckerStatus">Druckerstatus</string>
    <string name="src_StatusAktualisieren">Status aktualisieren</string>
    <string name="src_DruckerStatusNichtAbrufbar">Druckerstatus nicht abrufbar. Bitte Status erneut abrufen.</string>
    <string name="src_BitteWarten">Bitte warten...</string>
    <string name="src_Offline">Offline</string>
    <string name="src_Ja">Ja</string>
    <string name="src_Nein">Nein</string>
    <string name="src_SindSieSicher">Sind Sie sicher?</string>
    <string name="src_DruckerLoeschen">Drucker löschen</string>
    <string name="src_DruckerStatusWirdAbgefragt">Druckerstatus wird abgefragt</string>
    <string name="src_AnzahlTische">Anzahl der Tische</string>
    <string name="src_Kategorien">Kategorien</string>
    <string name="src_Löschen">Löschen</string>
    <string name="src_KategorieErstellen">Kategorie erstellen</string>
    <string name="src_Name">Name</string>
    <string name="src_Farbe">Farbe</string>
    <string name="src_Drucker">Drucker</string>
    <string name="src_Aktiv">Aktiv</string>
    <string name="src_Inaktiv">Inaktiv</string>
    <string name="src_NichtAlleFelderAusgefuellt">Nicht alle Felder ausgefüllt</string>
    <string name="src_KategorieAngelegt">Kategorie wurde angelegt</string>
    <string name="src_Uebernehmen">Übernehmen</string>
    <string name="src_FarbeWaehlen">Farbe wählen</string>
    <string name="src_KategorieBearbeiten">Kategorie Bearbeiten</string>
    <string name="src_KategorieBereitsVorhanden">Kategorie bereits vorhanden</string>
    <string name="src_KategorieNameBereitsVorhanden">Kategoriename bereits vorhanden</string>
    <string name="src_ProduktNameBereitsVorhanden">Produktname bereits vorhanden</string>
    <string name="src_KategorieGeaendert">Kategorie geändert</string>
    <string name="src_Entfernt">entfernt</string>
    <string name="src_Rueckgaengig">Rückgängig</string>
    <string name="src_Bearbeiten">Bearbeiten</string>
    <string name="src_Produkte">Produkte</string>
    <string name="src_ProduktAnlegen">Produkt Anlegen</string>
    <string name="src_ProduktBearbeiten">Produkt Bearbeiten</string>
    <string name="src_ProduktWurdeAngelegt">Produkt wurde angelegt</string>
    <string name="src_ProduktGaendert">Produkt geändert</string>
    <string name="src_ProduktBereitsVorhanden">Produkt bereits vorhanden</string>
    <string name="src_Pfand">Pfand</string>
    <string name="src_Pfandpreis">Pfandpreis</string>
    <string name="src_KeinPfand">Kein Pfand</string>
    <string name="src_Tisch">Tisch</string>
    <string name="src_Beleg">Beleg</string>
    <string name="src_Tisch_emtpy">Tisch -</string>
    <string name="src_Beleg_empty">Beleg -</string>
    <string name="src_KeineBelegeVorhanden">Keine Belege vorhanden</string>
    <string name="src_KeineTischeVorhanden">Keine Tische vorhanden</string>
    <string name="src_TischeSindInBenutzungUndKoennenNichtReduziertWerden">Tische sind in Benutzung und können nicht reduziert werden</string>
    <string name="src_KeinTischAusgewaehlt">Kein Tisch ausgewählt</string>
    <string name="src_KeinBelegAusgewaehlt">Kein Beleg ausgewählt</string>
    <string name="src_KeinBeleg__Ausgewaehlt">Kein Beleg \nausgewählt</string>
    <string name="src_KeineArtikelVorhanden">Keine Artikel vorhanden</string>
    <string name="src_KeineArtikel__Vorhanden">Keine Artikel \n    vorhanden</string>
    <string name="src_NeuerBelegHinzugefuegt">Neuer Beleg hinzugefügt</string>
    <string name="src_BelegAuswaehlen">Beleg auswählen</string>
    <string name="src_BelegAuswaehlenOffeneBelege">Beleg auswählen (Offene Belege)</string>
    <string name="src_TischAuswaehlen">Tisch auswählen</string>
    <string name="src_Bemerkung">Bemerkung</string>
    <string name="src_KundeBekommtSummeXZurueck">Kunde bekommt Summe {0}€ zurück.</string>
    <string name="src_ArtikelWerdenStorniert">Artikel werden storniert.</string>
    <string name="src_ArtikelWerdenRetourniert">Artikel werden retourniert.</string>
    <string name="src_BitteBestaetigenSieDenVorgang">Bitte bestätigen Sie den Vorgang.</string>
    <string name="src_RetoureStorno">Retoure/Storno</string>
    <string name="src_Retoure">Retoure</string>
    <string name="src_Storno">Storno</string>
    <string name="src_EsWurdeBereitsAlleArtikelGedruckt">Es wurden bereits alle Artikel gedruckt.</string>
    <string name="src_KasseWurdeVollstaendigGeloescht">Kasse wurde vollständig gelöscht</string>
    <string name="src_Summe">Summe:</string>
    <string name="src_OffeneSumme">Offene Summe:</string>
    <string name="src_KeineZusaetzlicheInfo">Keine Zusätzliche Information</string>
    <string name="src_KeineProdukteVorhanden">Keine Produkte vorhanden</string>
    <string name="src_KeineProduktAusgewaehlt">Kein Produkt ausgewählt</string>
    <string name="src_ExtraInfos">Extra Infomationen</string>
    <string name="src_ToGo">To Go</string>
    <string name="src_KeinVerkaufspreisAngegeben">Kein Verkaufspreis angegeben</string>
    <string name="src_ErmaessigterPreis">Ermäßigter Preis</string>
    <string name="src_KeineStueckzahlAngegeben">Keine Stückzahl angegeben</string>
    <string name="src_LeererBeleg">Leerer Beleg</string>
    <string name="src_NeuerBelegBereitsVorhanden">Neuer Beleg bereits vorhanden</string>
    <string name="src_Bezahlen">Bezahlen</string>
    <string name="src_Abbrechen">Abbrechen</string>
    <string name="src_Bestaetigen">Bestätigen</string>
    <string name="src_Rechnung">Rechnung</string>
    <string name="src_ZuZahlen">Zu Zahlen:</string>
    <string name="src_MoechteZahlen">Möchte zahlen:</string>
    <string name="src_Gegeben">Gegeben:</string>
    <string name="src_Rueckgeld">Rückgeld:</string>
    <string name="src_ArtikelAuswaehlen">Artikel auswählen</string>
    <string name="src_BitteBezahlvorgangBestaetigen">Bitte Bezahlvorgang bestätigen.</string>
    <string name="src_BitteSummeUeberpruefen">Bitte Summe überprüfen</string>
    <string name="src_Mehrwertsteuer">Mehrwertsteuer</string>
    <string name="src_AlleBelege">Alle Belege</string>
    <string name="src_MehrwertsteuerAuswaehlen">Mehrwertsteuer auswählen</string>
    <string name="src_Alle">Alle</string>
    <string name="src_Offen">Offen</string>
    <string name="src_Bezahlt">Bezahlt</string>
    <string name="src_AlleTische">Alle Tische</string>
    <string name="src_Heute">Heute</string>
    <string name="src_Summme">Summe</string>
    <string name="src_AlleZeitraeume">Alle Zeiträume</string>
    <string name="src_DerKategorieIstKeinDruckerZugeordnet">Der Kategorie ist kein Drucker zugeordnet</string>
    <string name="src_KeinenDruckerAusgewählt">Keinen Drucker ausgewählt</string>
    <string name="src_KeineArtikelZumBezahlenAusgewaehlt">Keine Artikel Zum Bezahlen ausgewählt</string>
    <string name="src_FarbeAuswaehlen">Farbe auswählen</string>
    <string name="src_nichtgedruckt">nicht gedruckt</string>
    <string name="src_offen">offen</string>
    <string name="src_bezahlt">bezahlt</string>
    <string name="src_EsWurdenNochKeineArtikelGedruckt">Es wurden noch keine Artikel gedruckt</string>
    <string name="src_BelegSplitten">Beleg splitten</string>
    <string name="src_BelegWirklichSplitten">Beleg wirklich splitten?</string>
    <string name="src_Kassenstand">Kassenstand</string>
    <string name="src_AktuellerKassenstand">Aktueller Kassenstand</string>
    <string name="src_AlleAbschlussbelege">Alle Abschlussbelege</string>
    <string name="src_Zusammenfassung">Zusammenfassung</string>
    <string name="src_Uebersicht">Übersicht</string>
    <string name="src_Umsatz">Umsatz</string>
    <string name="src_UmsatzGesamt">Umsatz Gesamt</string>
    <string name="src_SonstigeEinnahmen">Sonstige Einnahmen</string>
    <string name="src_Barzahlungen">Barzahlungen</string>
    <string name="src_Trinkgeld">Trinkgeld</string>
    <string name="src_Gesamt">Gesamt</string>
    <string name="src_Start">Start</string>
    <string name="src_VerkaeufeMit">Verkäufe mit</string>
    <string name="src_VerkaufMit">Verkauf mit</string>
    <string name="src_MwSt">MwSt.</string>
    <string name="src_Benutzerkonten">Benutzerkonten</string>
    <string name="src_Abonnementverwaltung">Abonnementverwaltung</string>
    <string name="src_Shopinformation">Shopinformation</string>
    <string name="src_Kasseneinstellungen">Kasseneinstellungen</string>
    <string name="src_bezahlt_klein">bezahlt</string>
    <string name="src_retourniert">retourniert</string>
    <string name="src_storniert">storniert</string>
    <string name="src_BonsDrucken">Bons drucken</string>
    <string name="src_Logout">Logout</string>
    <string name="src_AlsHauptkasseBenutzen">Als Hauptkasse benutzen</string>
    <string name="src_Hauptkasse">Hauptkasse</string>
    <string name="src_BelegDrucken">Beleg drucken</string>
    <string name="src_KasseMussFuerDieseUmstellungUnbenutztSein">Kasse muss für diese Umstellung unbenutzt sein!</string>
    <string name="src_OffSumme">Off. Summe</string>
    <string name="src_Retouren">Retouren</string>
    <string name="src_Stornierungen">Stornierungen</string>
    <string name="src_Stornierung">Stornierung</string>
    <string name="src_BelegBereitsGeschlossen">Beleg bereits geschlossen</string>
    <string name="src_Nutzername">Nutzername</string>
    <string name="src_Passwort">Passwort</string>
    <string name="src_PasswortBestätigen">Passwort bestätigen</string>
    <string name="src_Registrieren">Registrieren</string>
    <string name="src_BereitsRegistriert">Bereits registriert?</string>
    <string name="src_Anmelden">Anmelden</string>
    <string name="src_NormalerBelegDrucken">Normaler Beleg drucken</string>
    <string name="src_BewirtungsbelegDrucken">Bewirtungsbeleg drucken</string>
</resources>