<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:gravity="center"
    android:background="@color/colorPrimary3"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="30dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/src_Registrieren"/>

    <EditText
        android:id="@+id/activity_register_edt_fullname"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/src_Nutzername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_register_edt_email"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/src_Nutzername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_register_edt_pw"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/src_Passwort"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_register_edt_confirmpw"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/src_PasswortBestätigen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/activity_register_btnregister"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/roundedbutton_grey"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/src_Registrieren"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/src_BereitsRegistriert"/>
    <Button
        android:id="@+id/activity_register_btnlogin"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/roundedbutton_grey"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/src_Anmelden"
        android:textStyle="bold"
        android:textAllCaps="false"/>

</LinearLayout>