<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_editcategory_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary3"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/src_KategorieErstellen"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editcategory_add_tiname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
        <EditText
            android:id="@+id/editcategory_add_tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textStyle="normal"
            android:textAlignment="textStart"
            android:hint="@string/src_Name"
            android:backgroundTint="@color/colorPrimary3"
            android:textColorHint="@color/colorPrimary3"
            android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/editcategory_add_tvcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"

            android:text="@string/src_Farbe">
        </TextView>
        <Spinner
            android:id="@+id/editcategory_add_spinnercolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/editcategory_add_tvprinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/src_Drucker"
            android:textColorHint="@color/colorBlack">
        </TextView>
        <Spinner
            android:id="@+id/editcategory_add_spinnerprinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dialog"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/editcategory_add_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/src_Aktiv"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editcategory_add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="bottom|right"
                app:layout_anchorGravity="bottom|right"
                app:fabSize="normal"
                app:backgroundTint="@color/colorPrimary3"
                android:src="@drawable/ic_save_white_24dp"
                android:scaleType="center"
                android:layout_margin="16dp"
                android:clickable="true"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>