<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_puco_ll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_pumcpb_tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Test"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/fragment_pumcpb_tvnormalbill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/src_NormalerBelegDrucken"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorGrey"
            android:textSize="15dp">
        </TextView>

        <CheckBox
            android:id="@+id/fragment_pumcpb_normalbill_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/fragment_pumcpb_tvnormalbill"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text=""/>

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/fragment_pumcpb_tvecbill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/src_BewirtungsbelegDrucken"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorGrey"
            android:textSize="15dp">
        </TextView>

        <CheckBox
            android:id="@+id/fragment_pumcpb_ecbill_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/fragment_pumcpb_tvecbill"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text=""/>

    </RelativeLayout>

    <TextView
        android:id="@+id/fragment_pumcpb_tvprinter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/src_DruckerAuswaehlen"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:textSize="15dp">
    </TextView>

    <Spinner
        android:id="@+id/fragment_pumcpb_spinnerprinter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:spinnerMode="dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/fragment_pumcpb_btncancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/src_Abbrechen"
                android:textAllCaps="false"/>

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/fragment_pumcpb_btnok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/src_Bestaetigen"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>