<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_cash_pay_tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:text="@string/src_Rechnung"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_main_cash_pay_tvtopay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="@string/src_ZuZahlen"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/activity_main_cash_pay_tvtopaysum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="VK" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/activity_main_cash_pay_tvcustomerwantspay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="@string/src_KundeMoechteZahlen"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:tag="EUR"
                android:id="@+id/activity_main_cash_pay_tvcustomerwantspaySum"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:textColor="@color/colorBlack"
                android:textStyle="normal"
                android:textAlignment="textEnd"
                android:hint="EUR"
                android:backgroundTint="@color/colorGrey"
                android:textColorHint="@color/colorGrey"
                android:textSize="18dp"
                android:textCursorDrawable="@drawable/colorcursor_black"
                android:inputType="numberDecimal"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/activity_main_cash_pay_tvcustomerpays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="@string/src_Gegeben"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:tag="EUR"
                android:id="@+id/activity_main_cash_pay_tvcustomerpayssum"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:textColor="@color/colorBlack"
                android:textStyle="normal"
                android:textAlignment="textEnd"
                android:hint="EUR"
                android:backgroundTint="@color/colorGrey"
                android:textColorHint="@color/colorGrey"
                android:textSize="18dp"
                android:textCursorDrawable="@drawable/colorcursor_black"
                android:inputType="numberDecimal"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_main_cash_pay_tvrest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:text="@string/src_Rueckgeld"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/activity_main_cash_pay_tvrestsum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:text="VK" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_main_cash_pay_btnpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/src_Bezahlen"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/activity_main_cash_pay_btncancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/src_Abbrechen"
        android:textAllCaps="false"/>

</LinearLayout>